pulizia del codice